--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
 encoding/count_products.py=utf-8
+encoding/csv2xls.py=utf-8
 encoding/impl_info.py=utf-8
-encoding/utils.py=utf-8
+encoding/xls2csv.py=utf-8
