error analysis(1205, 'Lock wait timeout exceeded; try restarting transaction')

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -4,4 +4,5 @@ encoding/count_products.py=utf-8
 encoding/csv2xls.py=utf-8
 encoding/impl_info.py=utf-8
 encoding/load_products2npu.py=utf-8
+encoding/mysql_timeout.py=utf-8
 encoding/xls2csv.py=utf-8
