partly fix load caused bug...

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
 eclipse.preferences.version=1
 encoding//once-codes/add_category_index.py=utf-8
+encoding//once-codes/cp_scores_to_products.py=utf-8
 encoding/count_products.py=utf-8
 encoding/csv2xls.py=utf-8
 encoding/impl_info.py=utf-8
