提交第一版score.py

--- a/config/all_dbs.cfg
+++ b/config/all_dbs.cfg
@@ -18,7 +18,9 @@ user=root
 
 [all]
 data.dir = ./output
+save.dir = ./output/bak
 
 [machines]
 src.machine = localhost
 dest.machine = localhost
+
