--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -6,5 +6,6 @@ encoding/csv2xls.py=utf-8
 encoding/impl_info.py=utf-8
 encoding/load_products2npu.py=utf-8
 encoding/mysql_timeout.py=utf-8
+encoding/parsePMlogs.py=utf-8
 encoding/score.py=utf-8
 encoding/xls2csv.py=utf-8
