--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -3,6 +3,7 @@ encoding//once-codes/add_category_index.py=utf-8
 encoding//once-codes/cp_scores_to_products.py=utf-8
 encoding/count_products.py=utf-8
 encoding/csv2xls.py=utf-8
+encoding/get_pc_products_img_urls.py=utf-8
 encoding/impl_info.py=utf-8
 encoding/load_products2npu.py=utf-8
 encoding/mysql_timeout.py=utf-8
